syntax="proto3";

package proto;
option go_package = "./;proto";

import "mom_common.proto";
import "attribute_expression.proto";

message ProductPackageStackRuleInfo {
	//ID 
 	string id=3;
	//优先级 
 	int32 priority=4;
	//层数 
 	int32 numberOfLayers=5;
	//箱数 
 	int32 numberOfPackages=6;
	//是否启用 
 	bool enable=7;
	//默认匹配 
 	bool initialValue=8;
	//备注 
 	string remark=9;
    //特征表达式 
 	repeated AttributeExpressionInfo attributeExpressions=2;
}

message QueryProductPackageStackRuleRequest{
    // @inject_tag: uri:"pageIndex" form:"pageIndex"
    int64 pageIndex=1;
    // @inject_tag: uri:"pageSize" form:"pageSize"
    int64 pageSize=2;
    // @inject_tag: uri:"sortConfig" form:"sortConfig"
    string sortConfig=3;
}

message QueryProductPackageStackRuleResponse{
    Code code=1;
    string message=2;
    repeated ProductPackageStackRuleInfo data=3;
    int64 pages=4;
    int64 records=5;
    int64 total=6;
}

message GetAllProductPackageStackRuleResponse{
    Code code=1;
    string message=2;
    repeated ProductPackageStackRuleInfo data=3;
}

message GetProductPackageStackRuleDetailResponse{
    Code code=1;
    string message=2;
    ProductPackageStackRuleInfo data=3;
}